--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head></head>
   <body>
     <h1>CAN U SEE ME?!<h1>
+    <p>committed change</p>
     <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">this is where u go</a>
   </body>
 </html>
