--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head></head>
   <body>
-    <h1>CAN U SEE ME?!<h1>
-    <p>committed change</p>
+    <h1>THERE'RE THE LINKS TO MY PAGES</h1>
+    <p>React Page</p>
+    <p>NextJs page</p>
     <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">this is where u go</a>
   </body>
 </html>
