--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <body>
     <h1>THERE'RE THE LINKS TO MY PAGES</h1>
     <p>React Page</p>
-    <p>NextJs page</p>
-    <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">this is where u go</a>
+    <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/"><p>NextJs page</p></a>
   </body>
 </html>
