--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <body>
     <h1>THERE'RE THE LINKS TO MY PAGES</h1>
     <p>React Page</p>
-    <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/"><p>NextJs page</p></a>
+    <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">NextJs page</a>
   </body>
 </html>
