--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head></head>
   <body>
     <h1>THERE'RE THE LINKS TO MY PAGES</h1>
-    <p>React Page</p>
-    <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">NextJs page</a>
+    <h2>React_Page</h2>
+    <p>it was created at December last year</p>
+    <h2><a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">NextJs page</a></h2>
+    <p>try it out this early febuary</p>    
   </body>
 </html>
