--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head>
+    <title>Links</title>
+  </head>
   <body>
     <h1>THERE'RE THE LINKS TO MY PAGES</h1>
     <h2>React_Page</h2>
