--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>THERE'RE THE LINKS TO MY PAGES</h1>
-    <h2>React_Page</h2>
-    <p>it was created at December last year</p>
+    <h2><a href="https://cv-beta-khaki.vercel.app">React_Page</a>
+    <span>: it was created at December last year</span></h2
     <h2><a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">NextJs page</a></h2>
-    <p>try it out this early febuary</p>    
+    <span>: try it out this early febuary</span></p>    
   </body>
 </html>
