--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   </head>
   <body>
     <h1>THERE'RE THE LINKS TO MY PAGES</h1>
-    <h2><a href="https://cv-beta-khaki.vercel.app">React_Page</a>
-    <span>: it was created at December last year</span></h2
-    <h2><a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">NextJs page</a></h2>
-    <span>: try it out this early febuary</span></p>    
+    <h2>
+      <a href="https://cv-beta-khaki.vercel.app">React_Page</a>
+      <span>: it was created at December last year</span>
+    </h2>
+    <h2>
+      <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">NextJs page</a>
+      <span>: try it out this early febuary</span>
+    </h2>  
   </body>
 </html>
