--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <body>
     <h1>THERE'RE THE LINKS TO MY PAGES</h1>
     <h2>
-      <a href="https://cv-beta-khaki.vercel.app">React_Page</a>
+      <a href="https://cv-beta-khaki.vercel.app" target="_blank">React_Page</a>
       <span>: it was created at December last year</span>
     </h2>
     <h2>
-      <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/">NextJs page</a>
+      <a href="https://cv-by-nextjs-attarinchais-projects.vercel.app/"  target="_blank">NextJs page</a>
       <span>: try it out this early febuary</span>
     </h2>  
   </body>
